Fixed the overlapping of the navbar on a few pages.

--- a/app/assets/stylesheets/global.css
+++ b/app/assets/stylesheets/global.css
@@ -17,5 +17,6 @@ p {
 	bottom: 0;
 	background-color: #428bca;
 	margin-top: 70px;
+	clear: both;
 }
 
