--- a/app/assets/stylesheets/home_page.css
+++ b/app/assets/stylesheets/home_page.css
@@ -1,5 +1,5 @@
 header {
-	margin-bottom: 67px;
+	margin-bottom: 83px;
 }
 .home .edit-profile {
 	display: none;
